gke/manifests/base/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rustmq-webui
  namespace: rustmq
  labels:
    app.kubernetes.io/name: rustmq
    app.kubernetes.io/component: webui
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "rustmq-webui-backend-config"}'
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app.kubernetes.io/name: rustmq
    app.kubernetes.io/component: webui
